# coospace-quiz-gen

./: .gitignore  README.md  demo.py  setup.cfg
coospace_quiz_gen/: __init__.py
coospace_quiz_gen/questions/: __init__.py  base.py  types.py
coospace_quiz_gen/tests/: blocks.py
coospace_quiz_gen/utils/: html.py  text.py
