[metadata]
name = coospace_quiz_gen
version = 0.2.2
author = Tamás Ficsor
author_email = ficsort@inf.u-szeged.hu
description = Utilities for quiz generation for CooSpace
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ficstamas/coospace-quiz-gen
project_urls =
    Bug Tracker = https://github.com/ficstamas/coospace-quiz-gen/issues
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.10
